# octopus

./: .env.example  .gitignore  API_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION.md  CLAUDE.md  DASHBOARD_STATS_IMPLEMENTATION.md  EMAILOCTOPUS_INTEGRATION.md  FIX_ENGAGEMENT_DATA.md  HISTOGRAM_DUAL_SCALE_IMPLEMENTATION.md  HISTOGRAM_PERCENTAGE_LINE_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INSTALLATION_SUCCESS.md  LICENSE  MANIFEST.in  PACKAGE_INSTALL.md  PROJECT_SPEC.md  README.md  README_CSV_CONSOLIDATION.md  SYNC_TOOL.md  SYNC_TOOL_SUMMARY.md  TROUBLESHOOTING.md  csv_consolidator.py  pyproject.toml  requirements.txt  requirements_bayesian_gpu.txt  run.py  setup.cfg  setup.py
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.claude_docs/: 20251104_1510_Residence_Matching_Analysis.md  20251104_1535_Enhanced_Matching_Results.md  20251104_1721_Enhanced_Campaign_Model.md  20251105-0900-emailoctopus-migration-plan.md  20251105_Applicant_Matching_Enhancement.md  20251105_Dashboard_Design_Summary.md  20251105_Data_Model_Clarification.md  20251105_Email_Dashboard_Filter_Fix.md  20251105_Email_Sent_Data_Source.md  20251105_FINAL_Design_Summary.md  20251105_Multi-Channel_Dashboard_Design.md  20251105_Multi_Channel_Email_Count_Fix.md  20251105_Text_Campaign_Agency_Fix.md  20251105_Text_Campaign_Fix.md  20251105_Text_Campaign_Name_Fix.md  20251105_UPDATED_Dashboard_Design.md  20251205_1720_creating_new_bayesian_models.md  20251205_2010_data_catalog_for_causal_modeling.md  20251205_bayesian_causal_modeling_research.md  20251206_causal_models_progressive_complexity.md  20251207_campaign_data_schema_proposal.md  20251207_data_issues_and_schema_proposal.md  CONFIGURATION.md  DESIGN_SYSTEM.md  GETTING_STARTED.md  PARTICIPANT_DATA_IMPLEMENTATION.md  PARTICIPANT_FILTERING_IMPLEMENTATION.md  PIP_PACKAGE_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  VERIFICATION_RESULTS.md  bayesian_model_system.md  bayesian_modeling_framework.md  research_bayesian_performance_20251015.md  script_descriptions.md  tools.md
.swarm/: memory.db-shm  memory.db-wal
app/: __init__.py  cli.py
app/forms/: __init__.py  auth_forms.py
app/models/: user.py
app/routes/: auth.py  campaigns.py  main.py
app/services/: __init__.py  campaign_data_service.py  emailoctopus_client.py
app/templates/: base.html  dashboard.html  index.html  login.html
claudedocs/: BAYESIAN_IMPLEMENTATION_COMPLETE.md  BAYESIAN_MODELING_PROGRESSION.md  DATA_SCHEMA_DOCUMENTATION.md  MODEL_PROGRESSION_SUMMARY.md  SESSION_HANDOFF_20251015.md  phase0_gpu_validation_prd.md
data/: participant_features.parquet  participant_features_analysis.parquet  zipcode_to_county_cache.json  zipcode_to_county_cache.json.bak
data/bayes/: metadata_all_campaigns.json  unmatched_participants.csv
data/campaign_texting/: Empower_Saves_Texts_All_stats.csv
data/clustering_results-02/: CLUSTERING_ANALYSIS_REPORT.md  CLUSTER_DEFINITIONS.md  EXECUTIVE_SUMMARY_ONE_PAGER.md  PRESENTATION_SLIDES_OUTLINE.md  cluster_probabilities.npy  k_selection_results.csv  participant_features.parquet  participant_features_analysis.parquet  phase1_cluster_profiles.csv  phase2_cluster_outcomes.csv  phase2_cluster_profiles.csv  phase2_clustered_participants.parquet  phase2_k_selection.csv  phase3_bayesian_integration.parquet  phase3_cluster_profiles.csv  phase3_cluster_stats.csv  phase3_model_selection.csv  (+3 more)
docs/: Analysis-04-summarization.txt  CLUSTERING_PROJECT.md  DATA_ACCESS_REFERENCE.md  summary01-md
scripts/: __init__.py  analyze_export.py  analyze_final_export.py  analyze_unmatched.py  check_county_fields.py  check_engagement.py  count_csv_engagement.py  create_text_campaign_tool.py  create_user.py  debug_participant_fetch.py  download_campaign_messages.py  dryrun_text_participant_matching.py  enrich_participants.py  export_matched_data.py  extract_campaign_text.py  extract_text_campaigns.py  find_demographic_collections.py  find_franklin_county.py  find_matching_counties.py  fix_zipcode_cache.py  generate_classification_summary.py  import_text_conversations_tool.py  ingest_text_campaigns.py  ingest_text_exposures.py  list_mongo_databases.py  match_csv_to_residence.py  match_csv_to_residence_enhanced.py  match_new_participants_county_data.py  match_participants.py  match_participants_optimized.py  migrate_campaigns_add_type.py  migrate_to_campaign_data_tool.py  populate_applicants_db.py  populate_applicants_db_v2.py  rematch_campaign_data_tool.py  rematch_participants_tool.py  sync_campaigns.py  test_address_matching.py  test_campaign_model.py  test_email_matching.py  (+6 more)
src/: __init__.py
(+501 files in other folders)
