[metadata]
name = octopus
version = 0.1.0
description = EmailOctopus Campaign Analytics & Reporting Dashboard
long_description = file: README.md
long_description_content_type = text/markdown
author = EmpowerSaves
author_email = dev@empowersaves.com
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Flask

[options]
packages = find:
install_requires =
    Flask>=3.0.0
    Werkzeug>=3.0.1
    Flask-SQLAlchemy>=3.1.1
    Flask-Login>=0.6.3
    Flask-WTF>=1.2.1
    email-validator>=2.1.0
    python-dotenv>=1.0.0
    requests>=2.31.0
    numpy>=1.26.3
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    app
    app.*
    src
    src.*
exclude =
    tests
    tests.*
    docs

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.0.0
    flake8>=6.1.0
    mypy>=1.5.0
mongodb =
    pymongo>=4.6.1
    mongoengine>=0.27.0
reporting =
    plotly>=5.18.0
    ReportLab>=4.0.7
    APScheduler>=3.10.4

[options.entry_points]
console_scripts =
    octopus = app.cli:main
    octopus-create-user = scripts.create_user:main

[options.package_data]
app =
    templates/*.html
    templates/**/*.html
    static/css/*.css
    static/js/*.js
    static/img/*

[flake8]
max-line-length = 100
exclude = .git,__pycache__,venv,build,dist
ignore = E203,W503

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --cov=app --cov-report=html --cov-report=term
